--- a/mvc_spring/src/main/webapp/WEB-INF/web.xml
+++ b/mvc_spring/src/main/webapp/WEB-INF/web.xml
@@ -13,9 +13,8 @@
 	<!-- 스프링 MVC 설정 파일 등록  -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>
-			/WEB-INF/spring/root-context.xml
-			/WEB-INF/spring/security-context.xml
+		<param-value>/WEB-INF/spring/root-context.xml
+					 /WEB-INF/spring/security-context.xml
 		</param-value>
 	</context-param>
 	
